themes/upbound/assets/scss/_top-nav.scss
// Styling related to the top navigation

@mixin content-hierarchy {
    border: 1px solid #CDCDD3;
    background-color: var(--background-color);
    margin: -65px auto 0;
    max-width: 424px;
    position:relative;
    z-index: 1;
    max-height: 500px;
    overflow:scroll;
    border-radius: 8px;
    box-shadow: 0 4px 4px 0 rgba(3, 7, 36, .12);
}

#top-nav {
    height: 60px;
    border-bottom: 1px solid var(--border-bottom);
    width: 100%;
    left: 0;
    right: 0;
    margin: auto;
    position: relative;
    background-color: var(--background-color);

    @include media-breakpoint-down(xl) {
        position: fixed;
        z-index: 1021;
        border-bottom: 0;
        height: 74px;
        max-width: 430px;
        width: 60%;
        background-color: transparent;

        .logo-container {
            display: none;
        }

        .search-container {
            width: 91%;
        }

        .search-results,
        .no-results-container {
            width: 98%;
        }

        .nav-item {           
            width: 20%;
            margin-top: 10px;
        }

        .form-check-input{
            padding: 10px 4px 0 4px;
            vertical-align: top;
            margin-top: 10px;
            position: fixed;
            right: 0;
        }

        .form-check-label{
            display: none !important;
        }
    }

    .accordion-button {
        display: none;
    }

    .logo-container {
        position: absolute;
        left: 0;
        padding: 16px 40px;

        
        

        a {
            text-decoration: none;
        }

        
    }


    .search-panel {
        pointer-events: none; 

        & > * {
            pointer-events: auto; 
        }

        .search-container {
            height: 59px;
            max-width: 404px;
            margin: auto;
            background-color: var(--background-color);
            padding: 10px 4px 0 4px;
            z-index: 2;
            position: relative;

            .search-group {
                height: 38px;
                padding: 0 8px;
                position: relative;
                border: 1px solid #CDCDD3;
                border-radius: 8px;
                background-color: var(--background-color);

                &:focus-within {
                    border-color: #{$up-purple-400};
                }
    
                .search-icon-active {
                    padding-top: 4px;
                }
        
                input {
                    border: none;
                    font-size: 14px;
                    box-shadow: none;
                    height: 100%;
                    background-color: var(--background-color);
                    color: var(--body-font-color);
        
                    &::placeholder {
                        color: var(--body-font-color);
                    }
                }
        
                svg {
                    fill: var(--body-font-color);
                }

                .close-search {
                    margin-top: 4px;
                    cursor: pointer;
                }
            }
        }

        .search-results {
            @include content-hierarchy;
            padding: 70px 10px 10px;
            
            
        }

        .search-results::-webkit-scrollbar {
            background-color: transparent;

        }

        .no-results-container {
            @include content-hierarchy;
            padding: 70px 16px 16px;
            color: var(--body-font-color);

            .iconDiv {
                margin-right: 8px;
                
                svg {
                    vertical-align: top;
                    margin-top: 3px;
                }

                .grey-icon {
                    fill: var(--body-font-color);
                }
            }
        }
    }

    .nav-item {
        margin: 0;
        position:absolute;
        right: 0;
        top: 0;
        margin-top: 10px;
        margin-right: 16px;
        list-style-type: none;


        @include media-breakpoint-down(lg) {
            margin-top: 0;
            margin-right: 0;
            
        }

    }

    .form-check.form-switch.colormode {
        display: flex; 
        align-items: center;
        

        @include media-breakpoint-down(xl) {
            margin-top: 0;
            margin-right: 0;
            
        }
    }

    .form-check-input {
        margin-right: 8px;
        align-items: center;
    }
    
    .form-check-input:checked {
        background-color: var(--background-color);
        border-color: #{$up-purple-300};
        margin-right: 8px;

    }

}

